# xdist-custom-scheduler

./: README.md  conftest.py  pyproject.toml
app/models/: xdist_scheduler.py
app/tests/: test_xdist.py
scripts/: run.sh
